[feat] add getPostedTasksHistQuery
