# swagger-output.json
@@ -3018,6 +3018,266 @@
         }
       }
     },
+    "/tasks/management/poster/query": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "列出發案歷史紀錄(篩選模式)",
+        "description": "",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "query",
+            "description": "篩選狀態",
+            "default": "全部",
+            "enum": [
+              "全部",
+              "草稿",
+              "媒合中",
+              "進行中",
+              "已完成",
+              "已下架",
+              "未成立"
+            ],
+            "type": "string"
+          },
+          {
+            "name": "city",
+            "in": "query",
+            "description": "篩選縣市",
+            "default": "臺北市",
+            "type": "string"
+          },
+          {
+            "name": "dist",
+            "in": "query",
+            "description": "篩選地區",
+            "default": "信義區",
+            "type": "string"
+          },
+          {
+            "name": "isUrgent",
+            "in": "query",
+            "description": "是否為急件",
+            "default": "true",
+            "type": "string"
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "description": "排序依據(newest,highestSalary,mostEnquiries)(最新刊登 最高薪資 最高詢問度)",
+            "default": "newest",
+            "type": "string"
+          },
+          {
+            "name": "keyword",
+            "in": "query",
+            "description": "關鍵字查詢(任務標題、任務說明)",
+            "default": "",
+            "type": "string"
+          },
+          {
+            "name": "services",
+            "in": "query",
+            "description": "服務類別，可複選(使用,區隔)",
+            "default": "",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "每一頁的資料筆數(default:10)",
+            "default": "6",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "第幾頁(default:1)",
+            "default": "1",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功",
+            "schema": {
+              "$ref": "#/definitions/findTaskListGeneral"
+            }
+          },
+          "400": {
+            "description": "Id 格式錯誤、任務狀態錯誤、查無此任務",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "false"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "[40104, 40214, 40212]"
+                    },
+                    "statusCode": {
+                      "type": "number",
+                      "example": 400
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "系統錯誤",
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/tasks/management/helper/query": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "列出接案歷史紀錄(篩選模式)",
+        "description": "",
+        "parameters": [
+          {
+            "name": "city",
+            "in": "query",
+            "description": "篩選縣市",
+            "default": "臺北市",
+            "type": "string"
+          },
+          {
+            "name": "dist",
+            "in": "query",
+            "description": "篩選地區",
+            "default": "信義區",
+            "type": "string"
+          },
+          {
+            "name": "isUrgent",
+            "in": "query",
+            "description": "是否為急件",
+            "default": "true",
+            "type": "string"
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "description": "排序依據(newest,highestSalary,mostEnquiries)(最新刊登 最高薪資 最高詢問度)",
+            "default": "newest",
+            "type": "string"
+          },
+          {
+            "name": "keyword",
+            "in": "query",
+            "description": "關鍵字查詢(任務標題、任務說明)",
+            "default": "",
+            "type": "string"
+          },
+          {
+            "name": "services",
+            "in": "query",
+            "description": "服務類別，可複選(使用,區隔)",
+            "default": "",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "每一頁的資料筆數(default:10)",
+            "default": "6",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "第幾頁(default:1)",
+            "default": "1",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功",
+            "schema": {
+              "$ref": "#/definitions/findTaskListGeneral"
+            }
+          },
+          "400": {
+            "description": "Id 格式錯誤、任務狀態錯誤、查無此任務",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "false"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "[40104, 40214, 40212]"
+                    },
+                    "statusCode": {
+                      "type": "number",
+                      "example": 400
+                    },
+                    "isOperational": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "系統錯誤",
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/tasks/management/poster": {
       "get": {
         "tags": [
